[package]
name = "async-oncecell"
description = "Asynchronous versions of OnceCell and Lazy"
repository = "https://github.com/Yoeori/async-oncecell"
version = "0.2.0"
authors = ["Yoeri Otten <yoeri@otten.dev>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["once", "lazy", "static"]
exclude = [".github/*"]

[dependencies]
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tokio-test = "0.4"